# django-project

./: pyproject.toml
crm_system/: .env.template  manage.py
crm_system/ads/: admin.py  models.py  urls.py  views.py
crm_system/ads/migrations/: 0001_initial.py
crm_system/contracts/: admin.py  models.py  urls.py  views.py
crm_system/contracts/migrations/: 0001_initial.py
crm_system/crm_system/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
crm_system/customers/: models.py  urls.py  views.py
crm_system/customers/migrations/: 0001_initial.py
crm_system/leads/: admin.py  models.py  urls.py  views.py
crm_system/leads/migrations/: 0001_initial.py  0002_lead_status.py
crm_system/products/: admin.py  models.py  urls.py  views.py
crm_system/products/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_cost_and_more.py
crm_system/templates/: _base.html
crm_system/templates/registration/: logged_out.html  login.html
crm_system/templates/users/: index.html
