[project]
name = "django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "igor",email = "igor70@yandex.ru"}
]

requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
